--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "history": "^4.6.3",
     "marked": "^0.7.0",
+    "mdbreact": "^4.22.0",
     "prop-types": "^15.5.10",
     "react": "^16.3.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.1.2",
