--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mdbreact": "^4.22.0",
     "prop-types": "^15.5.10",
     "react": "^16.3.0",
+    "react-bell-icon": "^1.0.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
